Se termina sección central Se puede encontrar en

--- a/index.html
+++ b/index.html
@@ -563,11 +563,11 @@
                     </div>
                     <div class="album">
                         <figure>
-                            <img src="" alt="">
+                            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR6kPJGgaHVGD5Imuosyd5DQQmb_Z_PGUVYxuZ0AZo3QKogfDjG" alt="pandaExit">
                             <i><img src="ASSETS/Img/play.svg" alt="play"></i>
-                            <figcaption></figcaption>
+                            <figcaption>PANDA EXITOS ...y MAS</figcaption>
                         </figure>
-                        <p></p>
+                        <p>Date una chance para seguir mis otras Playlists 😉👉 ... se actualizan constatemente ...</p>
                     </div>
                 </div>
             </section>
