se estiliza la sección del footer que lleva la foto y el resumen

--- a/index.html
+++ b/index.html
@@ -580,7 +580,10 @@
             <section class="about__portade">
                 <h4 class="about__title">Acerca de</h4>
                 <div class="about__img">
-                    <p></p>
+                    <h4>3,067,952 Oyentes mensuales</h4>
+                    <p>Mexican pop-punk band PXNDX formed in 1996 when friends Pepe (José Madero) and Rix (Ricardo Treviño) decided to leave the grunge band they were in and start a new one that better reflected their love of groups like the Alkaline Trio and blink-182. With Pepe on vocals and rhythm guitar and Rix on bass, the duo hooked up with fellow Monterey, Nuevo León, residents and friends guitarist Ongi (Jorge Garza) and drummer Chunky (David Castillo). After recording a demo, Chunky decided to leave the band and was replaced by Kross (Jorge Vázquez); PXNDX then brought their music to the attention of Movic Records, which quickly signed them.
+
+                        In 2000, Arroz con Leche, including reworked versions of songs Pepe and company had written years before when they were still teenagers, was released, and was followed by a nationwide tour. Their sophomore album, La Revancha del Principe Charro, came out the following year, and Para Ti con Despecio, which contained more of the summery, power-chord-driven punk that had won them fans in the first place, was issued in Mexico in 2005. During this same time Ongi left Panda, but one of Kross' childhood friends, Arturo Arrendondo, who had sat in with the band before, took Ongi's place on lead guitar. In 2006 PXNDX's 4th studio album, Amantes Sunt Amentes, was released, and was a big enough hit to win them three statues at that year's MTV Latin American Music Awards in the Best Band, Best Alternative Artist, and Best Breakthrough Artist categories.</p>
                 </div>
             </section>
             <section>
