se añade sección de enlaces en el footer

--- a/index.html
+++ b/index.html
@@ -616,6 +616,60 @@
                     
                 </div>
             </section>
+            <section class="aboutLinks">
+                <div>
+                    <h2>Compañía</h2>
+                    <ul>
+                        <li><a href="#">Acerca de</a></li>
+                        <li><a href="#">Empleo</a></li>
+                        <li><a href="#">For the Record</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Comunidades</h2>
+                    <ul>
+                        <li><a href="#">Para artistas</a></li>
+                        <li><a href="#">Desarrolladores</a></li>
+                        <li><a href="#">Publicidad</a></li>
+                        <li><a href="#">Inversionistas</a></li>
+                        <li><a href="#">Proveedores</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Enlaces útiles</h2>
+                    <ul>
+                        <li><a href="#">Ayuda</a></li>
+                        <li><a href="#">App móvil gratis</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Planes de Spotify</h2>
+                    <ul>
+                        <li><a href="#">Premium Individual</a></li>
+                        <li><a href="#">Premium Duo</a></li>
+                        <li><a href="#">Premium Familiar</a></li>
+                        <li><a href="#">Premium para Estudiantes</a></li>
+                        <li><a href="#">Versión gratuita</a></li>
+                    </ul>
+                </div>
+                <div class="social-media">
+                    <a href="#">
+                        <i class="fa fa-instagram">
+                            <img src="ASSETS/Img/instagram.svg" alt="instagram">
+                        </i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-twitter">
+                            <img src="ASSETS/Img/twitter.svg" alt="twiter">
+                        </i>
+                    </a>
+                    <a href="#">
+                        <i class="fa fa-facebook">
+                            <img src="ASSETS/Img/facebook.svg" alt="facebook">
+                        </i>
+                    </a>
+                </div>
+            </section>
         </article>
     </footer>
     
