Se añade ultima sección del footer

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                         <li><a href="#">Versión gratuita</a></li>
                     </ul>
                 </div>
-                <div class="social-media">
+                <div class="social__media">
                     <a href="#">
                         <i class="fa fa-instagram">
                             <img src="ASSETS/Img/instagram.svg" alt="instagram">
@@ -669,6 +669,18 @@
                         </i>
                     </a>
                 </div>
+            </section>
+            <hr>
+            <section class="lastLinks">
+                    <ul class="footer__links">
+                        <li><a href="#">Legal</a></li>
+                        <li><a href="#">Seguridad y Centro de Privacidad</a></li>
+                        <li><a href="#">Política de Privacidad</a></li>
+                        <li><a href="#">Cookies</a></li>
+                        <li><a href="#">Sobre los anuncios</a></li>
+                        <li><a href="#">Accesibilidad</a></li>
+                    </ul>
+                    <p class="copyright">©2024 Spotify AB</p>
             </section>
         </article>
     </footer>
