se añade y estiliza aside derecho, se corrigen bugs que eso provoca

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         </figure>
                         <p class="album__year">2012 - Álbum</p>
                     </div>
-                    <div class="albums">
+                    <div class="albums especialCase">
                         <figure class="album__figure">
                             <img class="album__portade" src="https://i.scdn.co/image/ab67616d0000b27356106d4e42bc2fed54c72e13" alt="panda-unplugged">
                             <i class="album__play"><img class="album__play--img" src="ASSETS/Img/play.svg" alt="play"></i>
@@ -572,12 +572,19 @@
                 </div>
             </section>
         </article>
-        
         <aside class="rigthSide">
-
+            <article>
+                <section class="actualSong">
+                    <div>
+                        PXNDX -
+                        <div></div>
+                    </div>
+                    <div></div>
+                </section>
+            </article>
         </aside>
     </main>
-    <aside></aside>
+    
     <footer>
         <article class="about">
             <section class="about__portade">
