Se añade primera sección en aside

--- a/index.html
+++ b/index.html
@@ -574,12 +574,27 @@
         </article>
         <aside class="rigthSide">
             <article>
-                <section class="actualSong">
-                    <div>
-                        PXNDX -
-                        <div></div>
+                <section class="amentesSunt">
+                    <div class="amentes__Song">
+                        <div class="actualSong__buttons">
+                            <a class="button__title" href="">PXNDX</a>
+                            <a href=""></a>
+                        </div>
+                        <div class="actualSong__buttons">
+                            <a class="button__more" href=""><img src="ASSETS/Img/more-horizontal.svg" alt="more"></a>
+                            <i class="button__close"><img src="ASSETS/Img/x.svg" alt="close"></i>
+                        </div>
                     </div>
-                    <div></div>
+                    <div class="amentes__img">
+                        <figure class="img__figure">
+                            <img class="img__portade" src="https://i.scdn.co/image/ab67616d0000b273bcf00b6bf2045d79c5520334" alt="amantes-sunt-amentes">
+                            <figcaption class="img__caption">
+                                <p class="img__title">Los Malaventurados No Lloran</p>
+                                <p class="img__description">PXNDX</p>
+                            </figcaption>
+                        </figure>
+                        <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
+                    </div>
                 </section>
             </article>
         </aside>
