--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ASSETS/Sass/main.css">
+    <link rel="stylesheet" href="Sass/main.css">
     <title>PXNDX | Spotizer</title>
     <!--Notese el Favicon, recien aprendido-->
     <link rel="icon" href="ASSETS/Img/target.svg" type="image/svg" sizes="16x16">
