Se agrega mini portada en el aside

--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@
                 </div>
             </section>
         </article>
+
         <aside class="rigthSide">
             <article>
                 <section class="amentesSunt">
@@ -594,6 +595,17 @@
                             </figcaption>
                         </figure>
                         <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
+                    </div>
+                    <div class="about__artist">
+                            <div class="artist__photo">
+                                <h2>Acerca del artista</h2>
+                            </div>
+                        <div class="artist__descript">
+                            <h3>PXNDX</h3>
+                            <p class="artist__ear">3,326,035 oyentes mensuales</p>
+                            <button class="button">Dejar de seguir</button>
+                            <p class="artist__text">Mexican pop-punk band PXNDX formed in 1996 when friends Pepe (José Madero) and Rix (Ricardo Treviño) decided to leave the grunge band they were in and start a new one that better reflected their love of groups like the Alkaline Trio and blink-182. </p>                    
+                        </div>
                     </div>
                 </section>
             </article>
