Se añaden la mayoria de los hovers

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header>
         <!--Puedo entenderlo como la pequeña barra que dice inicio y buscar, con unos enlaces e íconos de la bibliteca, artistas y álbumes-->
         <article class="home">
-                <i class="home__home"><a href=""><img src="ASSETS/Img/home.svg" alt="home">Inicio</a></i>
-                <i class="home__search"><a href=""><img src="ASSETS/Img/search.svg" alt="search">Buscar</a></i>
+                <i class="home__home" title="Inicio" ><a href=""><img src="ASSETS/Img/home.svg" alt="home">Inicio</a></i>
+                <i class="home__search" title="Buscar" ><a href=""><img src="ASSETS/Img/search.svg" alt="search">Buscar</a></i>
         </article>
         <article class="nav">
             <section class="menu">
-                <i class="menu__library"><a href=""><img src="ASSETS/Img/book-open.svg" alt="library">Tu biblioteca</a></i>
+                <i class="menu__library" title="Comprimir tu biblioteca"><a href=""><img src="ASSETS/Img/book-open.svg" alt="library">Tu biblioteca</a></i>
                 <div>
-                    <i class="menu__add"><img src="ASSETS/Img/plus.svg" alt="plus"></i>
-                    <i class="menu__expand"><img src="ASSETS/Img/arrow-right.svg" alt="arrow-right"></i>
+                    <i class="menu__add" title="Crear una playlist o una carpeta"><img src="ASSETS/Img/plus.svg" alt="plus"></i>
+                    <i class="menu__expand" title="Mostrar más"><img src="ASSETS/Img/arrow-right.svg" alt="arrow-right"></i>
                 </div>
             </section>
             <section class="buttons">
@@ -29,7 +29,7 @@
                 <button class="buttons__albums">Álbumes</button>
             </section>
             <section class="options">
-                <i class="options__search"><img src="ASSETS/Img/search.svg" alt="icone__search"></i>
+                <i class="options__search" title="Buscar en tu biblioteca"><img src="ASSETS/Img/search.svg" alt="icone__search"></i>
                 <i class="options__list"><a href="">Recientes<img src="ASSETS/Img/list.svg" alt="icone__list"></a></i>
             </section>
         </article>
