--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 </section>
             </article>
 
-            <article>
+            <article class="content__scrollable">
                 <section class="amentesSunt">
                     <div class="amentes__img">
                         <figure class="img__figure">
@@ -670,6 +670,7 @@
 
             </article>
         </aside>
+        
         <article class="footer">
             <article class="about">
                 <section class="about__portade">
@@ -787,11 +788,36 @@
                     <h4>Narcisista por Excelencia</h4>
                     <p>PXNDX</p>
                 </div>
-                <i class="actualSong__add" title="Añadir a playlis"><img src="ASSETS/Img/check-circle-black.svg" alt="external-link"></i>
+                <i class="actualSong__add" title="Añadir a tus Me gusta"><img src="ASSETS/Img/check-circle-black.svg" alt="external-link"></i>
             </div>
         </section>
-        <section class="reproduction"></section>
-        <section class="settings"></section>
+        <section class="reproduction">
+            <div class="reproduction__buttons">
+                <i><img src="ASSETS/Img/random-correct.svg" alt=""></i>
+                <i><img src="ASSETS/Img/previous-arrow.svg" alt=""></i>
+                <i class="button__i"><img class="button__play" src="ASSETS/Img/playPrincipal--button.svg" alt=""></i>
+                <i><img src="ASSETS/Img/next-arrow.svg" alt=""></i>
+                <i><img src="ASSETS/Img/repeat--arrow.svg" alt=""></i>
+            </div>
+            <div class="reproduction__bar">
+                <span>0:01</span>
+                <input class="reproduction__range" type="range" id="rango" min="0" max="100" value="001">
+                <span>3:27</span>
+            </div>
+        </section>
+        <section class="settings">
+            <i><img src="ASSETS/Img/box--play.svg" alt="box--play"></i>
+            <i><img src="ASSETS/Img/microfone.svg" alt="microfone"></i>
+            <i><img src="ASSETS/Img/row--song.svg" alt="row--song"></i>
+            <i class="setting__devices">
+                <svg width="25" height="25" viewBox="0 0 25 25"><path fill="transparent" stroke="#fff" d="M9 2.5h11a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H9a2 2 0 0 1-2-2v-16a2 2 0 0 1 2-2z"/><path fill="#fff" d="M18 16a4 4 0 0 1-4 4 4 4 0 0 1-4-4 4 4 0 0 1 8 0m-1.5-8a2.5 2.5 0 0 1-2.5 2.5A2.5 2.5 0 0 1 11.5 8a2.5 2.5 0 0 1 5 0"/><path stroke="#fff" stroke-width="1.5" stroke-linecap="round" d="M5.5 5h-4m0 0v12m4 0h-4m4 3H3.4"/></svg></i>
+            <i>
+                <img src="ASSETS/Img/speaker--loud-white.svg" alt="speaker--loud-white">
+                <input class="setting__range" type="range">
+            </i> 
+            <i><svg width="25" height="25" viewBox="0 0 25 25"><path x="30" y="50" width="180" height="150" fill="transparent" stroke="#fff" stroke-width="1" rx="10" d="M4 5H20A1 1 0 0 1 21 6V19A1 1 0 0 1 20 20H4A1 1 0 0 1 3 19V6A1 1 0 0 1 4 5z"/><path x="140" y="140" width="90" height="90" fill="#fff" stroke="#fff" stroke-width="1" rx="10" d="M15 14H22A1 1 0 0 1 23 15V22A1 1 0 0 1 22 23H15A1 1 0 0 1 14 22V15A1 1 0 0 1 15 14z"/></svg></i>
+            <i><img src="ASSETS/Img/maximize-2.svg" alt="maximize"></i>
+        </section>
     </footer>
 </body>
 </html>
