Se añaden estilos de hover y los iconos de play a la sección izquierda

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <article class="playlist">
             <section class="favsongs">
                 <img class="favsongs__heart" src="ASSETS/Img/heart.svg" alt="songs-liked">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div class="favsongs__title">
                     <h4 >Tus me gusta</h4>
                     <div class="favsongs__img-txt">
@@ -48,6 +49,7 @@
 
             <section class="songsave">
                 <img class="songsave__bookmark" src="ASSETS/Img/bookmark.svg" alt="booked-caps">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>                
                 <div >
                     <h4>Tus episodios</h4>
                     <div class="songsave__img-txt">
@@ -58,6 +60,7 @@
             </section>
             <section class="artist">
                 <img class="artist__img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSVB7wDqnP6ODR12XWTq9DyIFlW_eXvgCFpHpZwu9z62sE17GV" alt="pxndx">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>                
                 <div class="artist__text">
                     <h4>PXNDX</h4>
                     <p>Artista</p>
@@ -65,6 +68,7 @@
             </section>
             <section class="album">
                 <img class="album__img" src="https://i.scdn.co/image/ab67616d0000b2733caf07319d9342db1d65d577" alt="bonanza">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>                
                 <div class="album__text">
                     <h4>Bonanza</h4>
                     <p>Álbum - PXNDX</p>
@@ -72,6 +76,7 @@
             </section>
             <section class="album">
                 <img src="https://i.scdn.co/image/ab67706f000000025ccd2427e7edb805dedfdad4" alt="a-workout">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>                
                 <div>
                     <h4>Adrenaline Workout</h4>
                     <p>Playlist - Spotify</p>
@@ -79,6 +84,7 @@
             </section>
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab6761610000e5eb3bcef85e105dfc42399ef0ba" alt="ed-sheeran">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>                
                 <div>
                     <h4>Ed Sheeran</h4>
                     <p>Artista</p>
@@ -86,6 +92,7 @@
             </section>
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab67616d00001e02e3f770416c725d18deebc8fb" alt="t-sister">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div>
                     <h4>Twisted Sister</h4>
                     <p>Artista</p>
@@ -94,6 +101,7 @@
           
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab6761610000e5eb4b3cfc24737acb15e73e8bd6" alt="j-priest">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div>
                     <h4>Judas Priest</h4>
                     <p>Artista</p>
@@ -102,6 +110,7 @@
 
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab6761610000e5eb451eb07ddc6e68d3e474c2bf" alt="l-skynyrd">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div>
                     <h4>Lynyrd Skyrnyrd</h4>
                     <p>Artista</p>
@@ -109,6 +118,7 @@
             </section>
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab6772690000dd22a56aa897505a21aebecf7ea3" alt="zz-top">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div>
                     <h4>ZZ Top</h4>
                     <p>Artista</p>
@@ -117,6 +127,7 @@
 
             <section class="artist">
                 <img src="https://i.scdn.co/image/ab6761610000e5ebb5b52f7e13f720c7a4856306" alt="ozzy">
+                <i><img src="ASSETS/Img/play-filled-white.svg" alt="play-white"></i>
                 <div>
                     <h4>Ozzy Osbourne</h4>
                     <p>Artista</p>
@@ -158,7 +169,7 @@
         <article class="content">
 
             <section class="options">
-                <i class="options__play"><img src="ASSETS/Img/play.svg" alt="play"></i>
+                <i class="options__play"><img src="ASSETS/Img/play-filled-black.svg" alt="play"></i>
                 <button class="options__follow">Siguiendo</button>
                 <i class="option__more"><img src="ASSETS/Img/more-horizontal.svg" alt="more"></i>
             </section>
