Se añaden estilos hover la sección popular, y se corrigen bugs de hover en ver mas adyacente, en los botones debajo de la portada y en la parte superior central dentro de la portada

--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
             <section class="options">
                 <i class="options__play"><img src="ASSETS/Img/play-filled-black.svg" alt="play"></i>
                 <button class="options__follow">Siguiendo</button>
-                <i class="option__more"><img src="ASSETS/Img/more-horizontal.svg" alt="more"></i>
+                <i class="option__more" title="Más opciones para PXNDX"><img src="ASSETS/Img/more-horizontal.svg" alt="more"></i>
             </section>
 
             <section class="songs">
                 <h4 class="songs__popular">Popular</h4>
                 <div class="song__1">
                     <div class="song__name">
-                        <div class="name__order"><p class="song-no">1</p> <i><img class="song-play" src="ASSETS/Img/play-white.svg" alt="song-play"></i></div>
+                        <div class="name__order"><p class="song-no">1</p> <i><img class="song-play" title="Reproducir Los Malaventurados No Lloran, de PXNDX" src="ASSETS/Img/play-filled-white.svg" alt="song-play"></i></div>
                         <img class="song__picture" src="https://gp1.wac.edgecastcdn.net/802892/http_public_production/photos/images/6789933/original/resize:600x600/crop:x0y20w158h119/aspect:1.0/hash:1463543397/7769.jpg?1463543397" alt="malaventura">
-                        <p class="song__title">Los Malaventurados No Lloran</p>
+                        <p class="song__title" title="Los Malaventurados No Lloran">Los Malaventurados No Lloran</p>
                     </div>
 
                     <div class="song__heared">
@@ -188,18 +188,19 @@
                     </div>
                     <div class="song__option">
                         <div class="options">
-                            <i class="option__add"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
+                            <i class="option__add" title="Agregar a tus Me gusta"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
                             <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
                         </div>
                         <p>3:27</p>
-                        <img src="ASSETS/Img/more-horizontal.svg" alt="song-more">
+                        <img class="option__more" title="Más opciones para Los Malaventurados No Lloran de PXNDX" src="ASSETS/Img/more-horizontal.svg" alt="song-more">
                     </div>
+
                 </div>
                 <div class="song__1">
                     <div class="song__name">
-                        <div class="name__order"><p class="song-no">1</p> <i><img class="song-play" src="ASSETS/Img/play-white.svg" alt="song-play"></i></div>
+                        <div class="name__order"><p class="song-no">2</p> <i><img class="song-play" title="Reproducir Procedimientos para Llegar a un Común Acuerdo, de PXNDX" src="ASSETS/Img/play-filled-white.svg" alt="song-play"></i></div>
                         <img class="song__picture" src="https://gp1.wac.edgecastcdn.net/802892/http_public_production/photos/images/6789933/original/resize:600x600/crop:x0y20w158h119/aspect:1.0/hash:1463543397/7769.jpg?1463543397" alt="malaventura">
-                        <p class="song__title">Procedimientos para Llegar a un Común Acuerdo</p>
+                        <p class="song__title" title="Procedimientos para Llegar a un Común Acuerdo">Procedimientos para Llegar a un Común Acuerdo</p>
                     </div>
 
                     <div class="song__heared">
@@ -207,18 +208,18 @@
                     </div>
                     <div class="song__option">
                         <div class="options">
-                            <i class="option__add"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
+                            <i class="option__add" title="Agregar a tus Me gusta"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
                             <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
                         </div>
                         <p>3:14</p>
-                        <img src="ASSETS/Img/more-horizontal.svg" alt="song-more">
+                        <img class="option__more" title="Más opciones para Procedimientos para Llegar a un Común Acuerdo de PXNDX" src="ASSETS/Img/more-horizontal.svg" alt="song-more">
                     </div>
                 </div>
                 <div class="song__1">
                     <div class="song__name">
-                        <div class="name__order"><p class="song-no">3</p> <i><img class="song-play" src="ASSETS/Img/play-white.svg" alt="song-play"></i></div>
+                        <div class="name__order"><p class="song-no">3</p> <i><img class="song-play" title="Reproducir Narcisista por Excelencia, de PXNDX" src="ASSETS/Img/play-filled-white.svg" alt="song-play"></i></div>
                         <img class="song__picture" src="https://gp1.wac.edgecastcdn.net/802892/http_public_production/photos/images/6789933/original/resize:600x600/crop:x0y20w158h119/aspect:1.0/hash:1463543397/7769.jpg?1463543397" alt="malaventura">
-                        <p class="song__title">Narcisista por Excelencia</p>
+                        <p class="song__title" title="Narcisista por Excelencia">Narcisista por Excelencia</p>
                     </div>
 
                     <div class="song__heared">
@@ -226,18 +227,18 @@
                     </div>
                     <div class="song__option">
                         <div class="options">
-                            <i class="option__add"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
+                            <i class="option__add" title="Agregar a tus Me gusta"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
                             <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
                         </div>
                         <p>3:47</p>
-                        <img src="ASSETS/Img/more-horizontal.svg" alt="song-more">
+                        <img class="option__more" title="Más opciones para Narcisista por Excelencia de PXNDX" src="ASSETS/Img/more-horizontal.svg" alt="song-more">
                     </div>
                 </div>
                 <div class="song__1">
                     <div class="song__name">
-                        <div class="name__order"><p class="song-no">4</p> <i><img class="song-play" src="ASSETS/Img/play-white.svg" alt="song-play"></i></div>
+                        <div class="name__order"><p class="song-no">4</p> <i><img class="song-play" title="Reproducir Disculpa los Malos Pensamientos, de PXNDX" src="ASSETS/Img/play-filled-white.svg" alt="song-play"></i></div>
                         <img class="song__picture" src="https://i.scdn.co/image/ab67616d0000b2737e9a976d44ebb73bf9d23931" alt="malaventura">
-                        <p class="song__title">Disculpa los Malos Pensamientos</p>
+                        <p class="song__title" title="Disculpa los Malos Pensamientos">Disculpa los Malos Pensamientos</p>
                     </div>
 
                     <div class="song__heared">
@@ -245,18 +246,18 @@
                     </div>
                     <div class="song__option">
                         <div class="options">
-                            <i class="option__add"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
+                            <i class="option__add" title="Agregar a tus Me gusta"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
                             <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
                         </div>
                         <p>3:58</p>
-                        <img src="ASSETS/Img/more-horizontal.svg" alt="song-more">
+                        <img class="option__more" title="Más opciones para Disculpa los Malos Pensamientos de PXNDX" src="ASSETS/Img/more-horizontal.svg" alt="song-more">
                     </div>
                 </div>
                 <div class="song__1">
                     <div class="song__name">
-                        <div class="name__order"><p class="song-no">5</p> <i><img class="song-play" src="ASSETS/Img/play-white.svg" alt="song-play"></i></div>
+                        <div class="name__order"><p class="song-no">5</p> <i><img class="song-play" title="Reproducir Cita en el Quirófano, de PXNDX" src="ASSETS/Img/play-filled-white.svg" alt="song-play"></i></div>
                         <img class="song__picture" src="https://i.scdn.co/image/ab67616d0000b2737e9a976d44ebb73bf9d23931" alt="malaventura">
-                        <p class="song__title">Cita en el Quirófano</p>
+                        <p class="song__title" title="Cita en el Quirófano">Cita en el Quirófano</p>
                     </div>
 
                     <div class="song__heared">
@@ -264,11 +265,11 @@
                     </div>
                     <div class="song__option">
                         <div class="options">
-                            <i class="option__add"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
+                            <i class="option__add" title="Agregar a tus Me gusta"><img src="ASSETS/Img/plus-circle.svg" alt="add"></i>
                             <i class="option__added"><img src="ASSETS/Img/check-circle-black.svg" alt="added"></i>
                         </div>
                         <p>4:02</p>
-                        <img src="ASSETS/Img/more-horizontal.svg" alt="song-more">
+                        <img class="option__more" title="Más opciones para Cita en el Quirófano de PXNDX" src="ASSETS/Img/more-horizontal.svg" alt="song-more">
                     </div>
                 </div>
             </section>
