Se corrige la posicion del .rightSide

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <i><img src="ASSETS/Img/chevron-right.svg" alt="right"></i>
                 </div>
                 <div class="navbar__buttons">
-                    <button class="button__premium"><p>Explorar Premium</p></button>
+                    <button class="button__premium" id="button__premium"><p>Explorar Premium</p></button>
                     <button class="button__install">
                         <img src="ASSETS/Img/arrow-down-circle.svg" alt="install">
                        <p> Instalar aplicación</p>
