Se terminan los estilos escalables del aside y del .controls

--- a/index.html
+++ b/index.html
@@ -764,8 +764,10 @@
                     </div>
                 <div class="artist__descript">
                     <h3>PXNDX</h3>
-                    <p class="artist__ear">3,326,035 oyentes mensuales</p>
-                    <button class="button">Dejar de seguir</button>
+                    <div>
+                        <p class="artist__ear">3,326,035 oyentes mensuales</p>
+                        <button class="button">Dejar de seguir</button>
+                    </div>
                     <p class="artist__text">Mexican pop-punk band PXNDX formed in 1996 when friends Pepe (José Madero) and Rix (Ricardo Treviño) decided to leave the grunge band they were in and start a new one that better reflected their love of groups like the Alkaline Trio and blink-182. </p>                    
                 </div>
             </section>
@@ -811,7 +813,7 @@
 
             <section class="next">
                 <div class="next__title">
-                    <h3>Siguiente en la fila...</h3>
+                    <h3>Siguiente en la fila de reproducción</h3>
                     <a href="">Abrir la fila de reproducción</a>
                 </div>
                 <div class="next__song">
